--- a/demo1/index.html
+++ b/demo1/index.html
@@ -33,7 +33,7 @@
 				</div>
 				
 				<div id="welcome">
-					<img src="https://www.shiinaliu.com/pic/loading.gif" />
+					<img src="img/loading.gif" />
 				</div>
 			</div>
 			
@@ -82,7 +82,7 @@
 				</div>
 				
 				<div id="welcome">
-					<img src="https://www.shiinaliu.com/pic/loading.gif" />
+					<img src="img/loading.gif" />
 				</div>
 			</div>
 			
